<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".activities.CheckoutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/checkoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:text="@string/checkouts"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:fontFamily="sans-serif-medium" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/checkout_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/checkout_informations"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        app:fontFamily="sans-serif-medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <EditText
                        android:id="@+id/checkout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:text="Rakoto"
                        android:minHeight="@dimen/spacing_xmlarge" />

                    <EditText
                        android:id="@+id/checkout_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:text="Soa"
                        android:hint="@string/prenoms"
                        android:minHeight="@dimen/spacing_xmlarge" />

                    <EditText
                        android:id="@+id/checkout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:inputType="phone"
                        android:text="0343232212"
                        android:hint="@string/phone"
                        android:minHeight="@dimen/spacing_xmlarge" />

                    <EditText
                        android:id="@+id/checkout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:hint="@string/email"
                        android:text="kenny@nexthope.net"
                        android:minHeight="@dimen/spacing_xmlarge" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/preprint_option"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        app:fontFamily="sans-serif-medium" />


                    <ImageView
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="@dimen/spacing_mlarge"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkout_pre_print"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:text="@string/pre_printed_ticket" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/payment"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        app:fontFamily="sans-serif-medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <RadioGroup
                        android:id="@+id/checkout_payment_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/checkout_cash_radio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="Cash"/>
                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/checkout_confirm_button"
                android:layout_width="match_parent"
                android:clickable="true"
                android:layout_height="@dimen/spacing_xxlarge"
                android:background="@color/primary">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_checkout"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:layout_width="@dimen/spacing_smlarge"
                        android:layout_height="@dimen/spacing_smlarge"
                        android:layout_marginLeft="@dimen/spacing_medium"
                        android:layout_marginStart="@dimen/spacing_medium"
                        app:tint="@android:color/white" />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    

</LinearLayout>