<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/grey_background"
    tools:context=".activities.TicketListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ticketListToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ticket_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_background"
                    android:layout_gravity="center|bottom"
                    android:gravity="center|bottom"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/ticket_list_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/primary"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/ticket_list_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" MGA"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/primary"
                        android:textStyle="bold" />
                </LinearLayout>


                <!--<TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:text="@string/checkouts"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:fontFamily="sans-serif-medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/checkout_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>-->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/spacing_medium"
                    app:cardElevation="@dimen/spacing_medium"
                    android:layout_margin="@dimen/spacing_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_mlarge"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/checkout_informations"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                app:fontFamily="sans-serif-medium" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:padding="@dimen/spacing_large">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/checkout_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusableInTouchMode="true"
                                android:singleLine="true"
                                android:maxLines="1"
                                />
                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/prenoms"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/checkout_first_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:singleLine="true"
                                android:maxLines="1" />
                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/phone"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/checkout_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:inputType="phone"
                                android:singleLine="true"
                                android:maxLines="1"
                                />
                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/checkout_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:inputType="textEmailAddress"
                                android:singleLine="true"
                                android:maxLines="1" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/spacing_medium"
                                android:layout_marginLeft="@dimen/spacing_large"
                                android:layout_marginRight="@dimen/spacing_large"
                                android:layout_marginTop="@dimen/spacing_large"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/preprint_option"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    app:fontFamily="sans-serif-medium" />


                                <ImageView
                                    android:layout_width="@dimen/spacing_mlarge"
                                    android:layout_height="@dimen/spacing_mlarge"
                                    />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="@dimen/spacing_large">

                                <androidx.appcompat.widget.AppCompatCheckBox
                                    android:id="@+id/checkout_pre_print"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacing_middle"
                                    android:text="@string/pre_printed_ticket" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/spacing_medium"
                                android:layout_marginLeft="@dimen/spacing_large"
                                android:layout_marginRight="@dimen/spacing_large"
                                android:layout_marginTop="@dimen/spacing_large"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/payment"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    app:fontFamily="sans-serif-medium" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="@dimen/spacing_large">

                                <RadioGroup
                                    android:id="@+id/checkout_payment_radio_group"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <RadioButton
                                        android:id="@+id/checkout_cash_radio"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:checked="true"
                                        android:text="Cash"/>
                                </RadioGroup>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>



                </androidx.cardview.widget.CardView>


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ticket_checkout_confirm_button"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@color/primary">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/confirm_checkout"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                            android:textColor="@android:color/white" />

                        <ImageView
                            android:layout_width="@dimen/spacing_smlarge"
                            android:layout_height="@dimen/spacing_smlarge"
                            android:layout_marginLeft="@dimen/spacing_medium"
                            android:layout_marginStart="@dimen/spacing_medium"
                            app:tint="@android:color/white" />

                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <!--<View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />



        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ticket_list_buy_button"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@color/primary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buy"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white" />
        </com.balysv.materialripple.MaterialRippleLayout>-->
    </LinearLayout>
</LinearLayout>